Visaul fixes to clipping in footer

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ footer .details-card {
     margin: auto;
     border-radius: 10px;
     margin-bottom: 25px;
+    margin-top: 25px;
     padding: 10px;
     width: 185px;
     height: 210px;
